test/Kubernetes.Tests/testassets/ingress-class-not-set/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: the-service
                port: 
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: the-service
  namespace: default
spec:
  selector:
    app: repro-1
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: the-service
  namespace: default
subsets:
  - addresses:
    - ip: 10.244.1.11
    - ip: 10.244.1.12
    ports:
    - name: http
      port: 80
      protocol: TCP
